# azure-python-function-app

./: .funcignore  .gitignore  AGENTS.md  README.md  deploy.sh  function_app.py  host.json  pyproject.toml  requirements.txt  run.py  trigger_github_workflow.sh
.github/workflows/: deploy.yml  deploy_environment.yml  main_eduardoteste.yml
AdminFlaskApp/: app.py
AdminFlaskApp/jobs/: __init__.py
FlaskApp/: app.py
config/: development.py  stage.py
website/: __init__.py  app.py  secrets_plugin.py
