[project]
name = "azure-functions-terraform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.24.0",
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
